--- a/tp-maven-docker/src/main/resources/templates/index.html
+++ b/tp-maven-docker/src/main/resources/templates/index.html
@@ -1,1 +1,17 @@
-Bonjour
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8" />
+<title>Best Appli'</title>
+<link rel="stylesheet" type="text/css"
+	href="webjars/bootstrap/4.0.0-2/css/bootstrap.min.css" />
+</head>
+	<body>
+		<div class="input">
+			<h1>Best Appli'</h1>
+			<label class="name">Nom </label>
+			<input class="name"></input>
+			<button>Valider</button>
+		</div>
+	</body>
+</html>
