--- a/tp-maven-docker/src/main/resources/templates/index.html
+++ b/tp-maven-docker/src/main/resources/templates/index.html
@@ -6,12 +6,13 @@
 <link rel="stylesheet" type="text/css"
 	href="webjars/bootstrap/4.0.0-2/css/bootstrap.min.css" />
 </head>
-	<body>
+<body>
+	<form th:action="@{/sendName}"   >
 		<div class="input">
 			<h1>Best Appli'</h1>
-			<label class="name">Nom </label>
-			<input class="name"></input>
+			<label class="name">Nom </label> <input th:name = "name" class="name" ></input>
 			<button>Valider</button>
 		</div>
-	</body>
+	</form>
+</body>
 </html>
