--- a/tp-maven-docker/src/main/resources/templates/index.html
+++ b/tp-maven-docker/src/main/resources/templates/index.html
@@ -7,12 +7,12 @@
 	href="webjars/bootstrap/4.0.0-2/css/bootstrap.min.css" />
 </head>
 <body>
-	<form th:action="@{/sendName}"   >
 		<div class="input">
 			<h1>Best Appli'</h1>
+	<form th:action="@{/sendName}"  method = "POST" >
 			<label class="name">Nom </label> <input th:name = "name" class="name" ></input>
-			<button>Valider</button>
-		</div>
+			<input type="submit" value ="valider"> 
 	</form>
+		</div>
 </body>
 </html>
